--- a/assets/sass/layout/_mainSection.scss
+++ b/assets/sass/layout/_mainSection.scss
@@ -1,3 +1,41 @@
 main {
-    background-color: navy;
+    background-color: papayawhip;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.noticia {
+    width: 100%;
+    max-width: 300px;
+    
+    .cabecera {
+        width: 100%;
+    }
+     
+    .cuerpo {
+        width: 100%;
+    }
+
+    &__img {
+        background-image: url("https://picsum.photos/200/300?random=1");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 150px;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .noticia {
+        width: 30%;
+        max-width: 300px;
+
+        &__img {
+            width: 100%;
+            height: 300px;
+        }
+    }
 }
