--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -4,7 +4,7 @@
     padding-left: 15px;
     padding-right: 15px;
     background-color: darkcyan;
-    height: 300px;
+    height: auto;
     width: 90%;
 }
 
