--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,3 +1,6 @@
 footer {
-    background-color: salmon;
+    background-color: #000000;
+    color: #ffffff;
+    text-align: center;
+    padding: 40px;
 }
