--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,900&display=swap" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,800&display=swap" rel="stylesheet');
 
 body {
-    font-family: 'Merriweather', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
 }
