--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -25,7 +25,7 @@ nav {
             padding: 15px;
 
             &:hover {
-                background-color: #F08080;
+                background-color: #ce0f3d;
             }
         }
 
