--- a/assets/sass/layout/_forms.scss
+++ b/assets/sass/layout/_forms.scss
@@ -1,5 +1,24 @@
 .newsletter {
     background-color: blueviolet;
-    width: 100%;
-    padding: 30px;
+    text-align: center;
+    padding: 40px 0px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.newsletter h2 {
+    font-size: 24px
+}
+
+.group input,.group button {
+    display: inline-block;
+    border-width: 0;
+    font-size: 13px;
+    padding: 5px 10px;
+}
+
+.group button {
+    background-color: coral;
+    color: white;
 }
