antes de achicar tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,28 +448,28 @@ aside {
 }
 
 .newsletter {
-  background-color: blueviolet;
   text-align: center;
-  padding: 40px 0px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  background-color: #ce0f3d;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  height: 100%;
 }
 
-.newsletter h2 {
-  font-size: 24px;
+@media (min-width: 768px) {
+  .newsletter {
+    text-align: center;
+    background-color: #ce0f3d;
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
 }
-
-.group input, .group button {
-  display: inline-block;
-  border-width: 0;
-  font-size: 13px;
-  padding: 5px 10px;
-}
-
-.group button {
-  background-color: coral;
-  color: white;
+@media (min-width: 1200px) {
+  .newsletter {
+    text-align: center;
+    background-color: lightgrey;
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
