--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ nav li {
 nav li a {
   color: #ffffff;
   text-decoration: none;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 15px;
 }
 nav li a:hover {
@@ -46,7 +46,7 @@ nav li:last-child {
 }
 
 main {
-  background-color: #ffffff;
+  background-color: #F8F8F8;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -86,7 +86,6 @@ main {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  background-color: darkcyan;
   height: auto;
   width: 90%;
 }
@@ -158,7 +157,6 @@ main {
 @media (min-width: 576px) {
   .contenedor {
     width: 540px;
-    background-color: palegoldenrod;
   }
 
   .d-sm-none {
@@ -220,7 +218,6 @@ main {
 @media (min-width: 768px) {
   .contenedor {
     width: 750px;
-    background-color: palegreen;
   }
 
   .d-md-none {
@@ -282,7 +279,6 @@ main {
 @media (min-width: 992px) {
   .contenedor {
     width: 970px;
-    background-color: paleturquoise;
   }
 
   .d-lg-none {
@@ -344,7 +340,6 @@ main {
 @media (min-width: 1200px) {
   .contenedor {
     width: 1170px;
-    background-color: palevioletred;
   }
 
   .d-xl-none {
@@ -439,7 +434,7 @@ aside {
   box-sizing: border-box;
   border-bottom: 1px solid #1e1b1b;
   text-align: center;
-  width: 150px;
+  width: 170px;
   padding: 5px 0px;
 }
 .aside__tags-link:hover {
@@ -450,17 +445,27 @@ aside {
 .newsletter {
   text-align: center;
   background-color: #ce0f3d;
-  padding-top: 40px;
-  padding-bottom: 20px;
+  padding: 40px 0px;
+}
+
+.newsletter h2 {
+  font-size: 24px;
+}
+
+.group button {
+  background-color: #ffcc00;
+  color: #000000;
+  padding: 5px 7px;
+}
+
+.group input {
+  height: 22px;
 }
 
 @media (min-width: 768px) {
   .newsletter {
     text-align: center;
-    background-color: lightgrey;
-    padding-top: 40px;
-    padding-bottom: 20px;
-    margin-top: 70px;
+    background-color: #ce0f3d;
   }
 }
 
