--- a/assets/sass/layout/_mainSection.scss
+++ b/assets/sass/layout/_mainSection.scss
@@ -1,5 +1,5 @@
 main {
-    background-color: #ffffff;
+    background-color: #F8F8F8;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
