--- a/assets/sass/layout/_forms.scss
+++ b/assets/sass/layout/_forms.scss
@@ -2,16 +2,20 @@
     text-align: center;
     background-color: #ce0f3d;
     padding: 40px 0px;
-  }  
+}  
 
-  .newsletter h2 {
-    font-size: 24px
+.newsletter h2 {
+  font-size: 24px;
+}
+
+.newsletter p {
+  color: #ffffff;
 }
 
 .group button {
   background-color: #ffcc00;
   color: #000000;
-  padding: 5px 7px;
+  padding: 4px 7px;
 }
 
 .group input {
