--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,10 +452,14 @@ aside {
   font-size: 24px;
 }
 
+.newsletter p {
+  color: #ffffff;
+}
+
 .group button {
   background-color: #ffcc00;
   color: #000000;
-  padding: 5px 7px;
+  padding: 4px 7px;
 }
 
 .group input {
